# UAV-Differential-Equation-Modelling

./: .gitignore  CMakeLists.txt  README.md  main.cpp  stats.py
helper/: helper.cpp  helper.h
player/: player.cpp  player.h
variables/: variables.h
